# timbal

./: .gitignore  404.html  CLAUDE.md  EVALS_V1.md  EVALS_V1_EXAMPLE.yaml  EVALS_V1_FLOW.yaml  EVALS_V1_VALIDATORS.md  README.md  ROADMAP.md  agents.html  agents_v2.html  audio_streamer.py  examples.html  flows.html  index.html  integrations.html  integrations_v2.html  introduction.html  introduction_v2.html  kb.html  markdown-page.html  mic_speaker_test.py  package-lock.json  pyproject.toml  releases.html  seq_dp_complex_test.py  seq_dp_unbounded_test.py  seq_dp_with_restrictions.py  sitemap.xml  state.html  test.py  workflows.html  workflows_v2.html
.github/workflows/: ci.yml  cli.yml  deploy.yml
advanced/: default_params.html  hooks.html  run_context.html  system_prompts.html  tracing.html
advanced_v2/: default_params.html  hooks.html  run_context.html  system_prompts.html  tracing.html
agents/: advanced.html  evals.html  kb.html  memory.html  rewind.html  tools.html  voice.html
agents_v2/: advanced.html  evals.html  memory.html  rewind.html  tools.html  voice.html
assets/css/: styles.3b66656b.css  styles.7357224d.css  styles.8bf77f54.css  styles.a695780b.css  styles.b9425ece.css  styles.c3600fde.css  styles.e1820ef6.css  styles.f5ee7f5d.css
assets/js/: 03560c53.08f1a601.js  03560c53.d15ad475.js  0807f738.aca2fa7d.js  0ad7d55f.07078c78.js  0ad7d55f.2459c7db.js  0ad7d55f.25103894.js  0ad7d55f.26830969.js  0ad7d55f.387b1ce8.js  0ad7d55f.5e5b9a6a.js  0ad7d55f.92d1236b.js  0ad7d55f.b6020180.js  0ad7d55f.dfeeafea.js  0d1ef36e.b35f9a8c.js  12ae150c.1c9782a4.js  12ae150c.d33e3144.js  12ae150c.f48db2ad.js  131185ae.6fe804f0.js  16519eb7.007cf28f.js  16519eb7.af72b0ca.js  1698ca12.3e0faea4.js  16b88c31.0a2e8860.js  17896441.1444b112.js  17896441.74ecff6a.js  17896441.75ec3cb5.js  17896441.7f3a19dd.js  17896441.9528147f.js  17896441.d571e81c.js  17896441.f3095859.js  183463a8.2ef3b258.js  183463a8.8cc3b355.js  183463a8.952b98d5.js  1969bdf0.2a4f750b.js  1969bdf0.55f5aaeb.js  1969bdf0.cd834908.js  1969bdf0.e13d646c.js  1b2e1d00.d504cb8a.js  1f391b9e.03cd38d7.js  1f391b9e.2343ef62.js  1f391b9e.aeb11b42.js  1f391b9e.c4e220c9.js  (+425 more)
benchmarks/: README.md  bench_install.py
benchmarks/agno/: README.md  bench_agent.py  bench_double_fanout.py  bench_parallel.py  bench_workflow.py
benchmarks/crewai/: README.md  bench_agent.py  bench_double_fanout.py  bench_parallel.py  bench_workflow.py
benchmarks/google_adk/: README.md  bench_agent.py  bench_callbacks.py  bench_transfer.py
benchmarks/langchain/: README.md  _bench_ae_quick.py  bench_agent.py  bench_double_fanout.py  bench_parallel.py  bench_workflow.py
benchmarks/openai_agents/: README.md  bench_agent.py  bench_agent_as_tool.py  bench_handoff.py
benchmarks/pydantic/: README.md  bench_agent.py  bench_control_flow.py  bench_double_fanout.py  bench_linear_loop.py  bench_parallel.py  bench_workflow.py
cli/: build.zig  install.ps1  install.sh  integration_tests.ps1  integration_tests.sh  main.zig  manifest.json  tests.zig  utils.zig
cli/commands/: add.zig  build.zig  configure.zig  create.zig  credential_helper.zig  env.zig  init.zig  push.zig  run.zig  start.zig  upgrade.zig
cli/init-templates/: .dockerignore  agent.py  flow.py  pyproject.toml  timbal.yaml  workflow.py
docs/: brainstorming.md  docs.json  docusaurus.config.js  index.mdx  installation.mdx  model_capabilities.mdx  package-lock.json  package.json  quickstart.mdx  sidebars-v2.js  sidebars.js  sidebars_examples.js
docs/agents/: approvals.mdx  background-tasks.mdx  commands.mdx  dynamic.mdx  evals.mdx  human-in-the-loop.mdx  index.mdx  mcp.mdx  memory-compaction.mdx  memory.mdx  skills.mdx  structured-output.mdx  thinking.mdx  tools.mdx  voice.mdx
docs/ai-tools/: claude-code.mdx  cursor.mdx  windsurf.mdx
docs/api-reference/: authentication.mdx  errors.mdx  introduction.mdx  openapi.json  pagination.mdx
docs/core-concepts/: context.mdx  events.mdx  runnables.mdx  tracing.mdx
docs/deployment/: index.mdx  platform.mdx  self-hosted.mdx
docs/docs/: introduction.mdx
docs/evals/: index.mdx  running-evals.mdx  tracing.mdx  writing-evals.mdx
docs/examples/: index.mdx
docs/human-in-the-loop/: approval-gates.mdx  client-integration.mdx  index.mdx  resuming.mdx  (+2 more)
docs2/: agents_v2.html  integrations_v2.html  introduction_v2.html  workflows_v2.html
docs_mintlify/: docs.json  index.mdx  installation.mdx  model_capabilities.mdx  quickstart.mdx
examples/: automotive.html  design.html  ecommerce.html  education.html  financials.html  healthcare.html  industry.html  legal.html  media.html  overview.html  real-estate.html  tourism.html  transport.html  voice_turn_modes.py
flows/: advanced.html  memory.html  state.html
getting-started/: installation.html  model_capabilities.html  quickstart.html
getting-started_v2/: installation.html  model_capabilities.html  quickstart.html
integrations/: elevenlabs.html  fal.html  gmail.html  perplexity.html  sharepoint.html  twilio.html
integrations_v2/: elevenlabs.html  fal.html  gmail.html  perplexity.html  sharepoint.html  twilio.html
kb/: embeddings.html  indexes.html  tables.html
scripts/: audit_models.py  generate_models.py  generate_video_models.py  probe_bizneo_hr.py  release.sh  smoke_voice_turn_modes.py  upload-cli-release-assets.sh  video_costs_upsert.sql
timbal/: __init__.py  types.py
tui/: Cargo.toml
tui/src/: app.rs  audio.rs  commands.rs  config.rs  event.rs  history.rs  lib.rs  main.rs  theme.rs  tui.rs  ui.rs
tui/src/commands/: ace.rs  clear.rs  configure.rs  help.rs  mod.rs  project.rs  quit.rs  test.rs
tui/src/model/: config.rs  conversation.rs  history.rs  mod.rs  project.rs
tui/src/screens/: ace_explorer.rs  configure.rs  help.rs  home.rs  mod.rs  project.rs
tui/src/screens/ace/: evals.rs  mod.rs  playground.rs  policies.rs  state.rs  variables.rs  widgets.rs
tui/src/widgets/: mod.rs  spinner.rs  vectorscope.rs
voice_agent/: audio.py  audio_bg.py  audio_local.py  stream.py  twilio_server.py
workflows/: advanced.html  memory.html
workflows_v2/: advanced.html  memory.html
(+1346 files in other folders)
